# -- UV CONFIG --------------------------------------------------------------------------

[project]
name = "GitHub Profile README"
version = "1.0.0"
requires-python = "==3.14.3"

dependencies = [
  "rich==15.0.0",
  "feedparser==15.0.0",
]

[dependency-groups]
dev = [
  "bpython>=0.26,<0.27",
  "ruff>=0.15.9,<0.16.0"
]

[tool.uv]
package = false


# -- PYLINT CONFIG ----------------------------------------------------------------------

[tool.pylint.master]
jobs = "0"  # Auto-detect the number of processors
fail-under = "10"
ignore-patterns = '''
  \.eggs
  |_build
  |\.git
  |\.hg
  |\.mypy_cache
  |\.tox
  |\.venv
  |buck-out
  |build
  |conf.py
  |dist
'''
persistent = "no"
load-plugins = ["pylint_django"]
limit-inference-results = "100"
suggestion-mode = "yes"
unsafe-load-any-extension = "no"
extension-pkg-whitelist = ""
exit-zero = "no"
from-stdin = "no"

[tool.pylint.message_control]
enable = [
  "F",  # Fatal
  "E",  # Error
  "W",  # Warning
  "R",  # Refactor
  "C",  # Convention
  "I",  # Informational
]
disable = """
  attribute-defined-outside-init,
  line-too-long,
  missing-class-docstring,
  missing-function-docstring,
  missing-module-docstring,
  no-self-use,
"""

[tool.pylint.reports]
reports = "no"
msg-template = "{path}:{line}: [{msg_id}({symbol}), {obj}] {msg}"
output-format = "colorized"
score = "no"

[tool.pylint.format]
max-line-length = "99"

[tool.pylint.basic]
good-names = "_, qs, pk, f"

[tool.pylint.miscellaneous]
notes="TODO, FIXME, DEBUG"
